style.css
/* importing Google fonts - Road Rage */
@import url('https://fonts.googleapis.com/css2?family=Road+Rage&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');

body {
    background: linear-gradient(#080808, #9aa4a0);
    margin: 0;
    min-height: 100vw;
    height: auto;
    display: grid;
    grid-template-columns: 1fr .92fr;
    align-content: start;
    padding: 70px 20px 20px;

}

 /* ----------------- Fonts section ------------------- */

@font-face {
    font-family: 'Gagalin';
    src: url('fonts/Gagalin-Regular.otf') format('opentype');
    font-weight: normal;
    font-style: normal;
}


 /* ----------------- Headers section ------------------- */


.container {
    grid-column: 1;
    justify-self: start;
    display: flex;
    flex-direction: column;
    height: auto;
    max-width: 700px;
    gap: clamp(1px, -2vw, 10px);
    padding-left: 30px;

}

.header {

    color: #ffbd59;
    font-family: 'Courier Prime', monospace;
    font-size: clamp(5px, 3vw, 35px);
    font-weight: bold;
    margin-top: 50px;
    margin-left: 2px;

}

.name-header {

    color: white;
    font-family: "Gagalin";
    font-size: clamp(18px, 7vw, 200px);
    line-height: clamp(2px, 7vw, 120px);
    padding-top: 20px;
    padding-bottom: clamp(2px, 5vw, 5px);

}

.box {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: 1fr 1fr;
    background-color: transparent;
    width: clamp(20px, 40vw, 640px);
    top: clamp(10px, 100vh, 150px);
    left: clamp(1px, 10vw, 98px);
}

.artist-badge-1 {
    grid-row: 1;
    text-align: justify;
    line-height: 1.5;
    font-size: clamp(5px, 1.2vw, 16px);
    font-family: Arial, Helvetica, sans-serif;
    color: white;
    background: rgb(143, 140, 140,0.5);
    width: clamp(5px, 14vw, 175px);
    padding-left: 10px;
    border-radius: 15px;
}

.artist-badge-2{
    grid-row: 2;
    text-align: justify;
    line-height: 1.5;
    font-size: clamp(5px, 1.2vw, 16px);
    font-family: Arial, Helvetica, sans-serif;
    color: white;
    background: rgba(253, 212, 77, 0.3);
    width: clamp(5px, 9vw, 115px);
    padding-left: 10px;
    border-radius: 15px;
}

.artist-badge-3{
    grid-row: 1;
    grid-column: 2;
    text-align: justify;
    line-height: 1.5;
    font-size: clamp(5px, 1.2vw, 16px);
    font-family: Arial, Helvetica, sans-serif;
    color: rgb(53, 46, 46);
    background: rgba(255, 255, 255, 0.692);
    width: clamp(5px, 9vw, 115px);
    padding-left: 10px;
    border-radius: 15px;
}

 /* ----------------- main image section ------------------- */

.image-box {
    grid-column: 2;
    justify-self: start;
    display: flex;
    flex-direction: column;
    height: auto;
    width: clamp(30px, 38vw, 650px);
    padding-left: clamp(10px, 2vw, 195px);
    padding-top: 58px;

}


.my-image {
    width: 100%;
    height: auto;
    border-radius: 10%;
    border: 3px solid #ffbd59;
    box-shadow: o 10px 25px rgba(0, 0, 0, 0.4);
    background: white;
}

 /* ----------------- button section ------------------- */

.button{
    background-color: #ada9a5;
    border:2px solid #ffbd59;
    border-radius: 40px;
    font-size: clamp(6px, 1.3vw, 30px);
    margin-left: clamp(1px, 4.7vw, 0px);
    margin-top: clamp(6px, 7vw, 200px);
    color:#0c0b0b;
    font-weight: bold;
    width: clamp(20px, 17vw, 300px);
    height:  clamp(10px, 3vw, 200px);
    box-shadow:  3px 5px 20px rgba(0,0,0.2, 0.4);
   
}

.button:hover{
    transform:scale(1.1);
    background-color: #fcfcfc;
    color: rgb(8, 8, 8);
    transition: transform 0.5s ease, background-color 0.2s, color 0.2s;
   
}

 /* ----------------- Navigation section ------------------- */

.navBar {
    display: flex;
    position: fixed;
    justify-content: space-between;
    background-color: #fffdf9;
    padding: 9px 1px;
    width: 100%;
    top: 0;
    left: 0;
    box-shadow: 5px 20px 25px rgba(0, 0, 0, 0.4)

}


.logo {
    font-size: clamp(5px, 2vw, 20px);
    color: #131210;
    font-family: "Gagalin";
    margin-left: clamp(1px, 2vw, 70px);
    margin-top: clamp(5px, 4vh, 2px);
}

.navBar ul {
    list-style: none;
    display: flex;
    justify-content: flex-end;
    margin: 0;
    padding: 0;
    gap: clamp(1px, 2vw, 1px);

}

.navBar li {
    margin: 0 clamp(5px, 2vw, 45px);
}


.navBar a {
    display: inline-block;
    text-decoration: none;
    color: #0e2007;
    font-size: clamp(2px, 1.5vw, 20px);
    padding: 6px;
}

.navBar a:hover {
    background-color: #77946c;
    border-radius: 50px;
    color: white;
}

.artwork-container{
    grid-column: 1 / -1;
    display: grid;
    width: 100%;
    margin-top: 200px;
    margin-left: -54px;
    font-family: "Roboto", sans-serif;
    grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
    gap: 2px;

   
}

.card-list .card-item .card-link{
    width: 95%;
    display: block;
    background: white;
    padding: 18px;
    border-radius: 12px;
    text-decoration: none;
    margin-left: clamp(5px, 1vw, 1px);
    box-shadow: 10px 10px 10px  rgba(21, 71, 40, 0.8);
    object-fit: cover;
    aspect-ratio: 1/1;
}

.card-list .card-link .card-image{
    border-radius: 15px;
    width: 100%;
    height: 100%;
    border: 6px solid #ffbd59;
    margin: -5px -5px;
    
}

.card-list .card-item .card-link .card-button{
    border-radius: 50%;
    transform: rotate(180deg);
    aspect-ratio: 1 /1 ;
}

.card-list .card-item .card-link .card-button:hover{
    background: rgb(55, 167, 70, 0.5);
    transform: rotate(150deg) scale(1.2);
    transition: transform 0.2s ease;
   
    
}
.card-list .card-item .card-link .badge{
    background: rgb(73, 233, 73, 0.3);
    width: 110px;
    border-radius: 10px;
    color: rgb(25, 94, 16);
    padding-left: 5px;
}




/* TABLET VIEW  */

@media (max-width: 780px) {
    .navBar {padding: 5px 3px;}
}

/* MOBILE VIEW*/
@media (max-width: 480px) {

    body {grid-template-columns: 1fr;}

    .navBar {padding: 5px 3px;}

    .navBar ul a {font-size: clamp(5px, 5vw, 11px);}

     /* ----------------- Mobile headers section ------------------- */

     .container {
        grid-row: 1;
        width: 100%;
        max-width: 500px;
        margin: auto;
        padding-top: 1px;
        padding-left: 1px;
        justify-items: center;
        margin-top: -50px;

    }

    .header {font-size: clamp(1px, 7vw, 20px);}

    .name-header {
        font-size: clamp(2px, 18vw, 90px);
        line-height: clamp(2px, 17vw,60px);
        padding-top: 20px;
        padding-bottom: clamp(2px, 5vw, 5px);
    }
    .image-box {
        grid-row: 2;
        grid-column: 1;
        width: clamp(200px, 85vw, 890px);
        align-self: center;
        justify-self: center;
        padding-left: 0;
        margin-top: -45px;
    }

    .box {width: clamp(200px, 88vw, 480px);} /* container box for description */

    .description {
        font-size: clamp(10px, 12vw, 13px);
        text-align: justify;
    }


    .navBar .logo {
        font-size: clamp(2px, 5vw, 20px);
        margin-left: clamp(2px, 4vw, 13px);
        margin-top: clamp(0px, 4vh, 1px);
    }


    /* ----------------- button section ------------------- */

    .button{
        margin-left: clamp(1px, 1vw, 10px);
        margin-top: clamp(2px, 5vw, 20px);
        font-size: clamp(6px, 1vw, 20px);
        width: clamp(20px, 30vw, 80px);
        height:  clamp(10px, 3vw, 200px);
    }

    button:active{
        transform: scale(0.5);
        background-color: #5d7454;
        color: white;

    }


}

